Bug 327826 - contact photo overlaps placeholder button
Summary: contact photo overlaps placeholder button
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.11.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-19 17:25 UTC by Florian
Modified: 2014-01-25 10:01 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.2
Sentry Crash Report:


Attachments
Screenshot before photo change (69.59 KB, image/png)
2013-11-19 17:26 UTC, Florian
Details
Screenshot after photo change (72.51 KB, image/png)
2013-11-19 17:26 UTC, Florian
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Florian 2013-11-19 17:25:37 UTC
Whenever I change a contact's photo, the image overlaps the placeholder/button. This looks weird.

Reproducible: Always

Steps to Reproduce:
1. Create/edit contact
2. Add photo
3. Save changes
Actual Results:  
- Button "change contact photo" is not a square
- Image overlaps button


Expected Results:  
- Button "change contact photo" is a square
- Image does not overlap the button
Comment 1 Florian 2013-11-19 17:26:07 UTC
Created attachment 83641 [details]
Screenshot before photo change
Comment 2 Florian 2013-11-19 17:26:37 UTC
Created attachment 83642 [details]
Screenshot after photo change
Comment 3 Laurent Montel 2014-01-25 10:00:43 UTC
Git commit 29cc76ca0c6eab9b3807eb7bb3c5a71bd496c891 by Montel Laurent.
Committed on 25/01/2014 at 10:00.
Pushed by mlaurent into branch 'KDE/4.12'.

Fix Bug 327826 - contact photo overlaps placeholder button

FIXED-IN: 4.12.2

M  +0    -1    akonadi/contact/editor/contacteditorwidget.cpp

http://commits.kde.org/kdepimlibs/29cc76ca0c6eab9b3807eb7bb3c5a71bd496c891