Fix Bug 327826 - contact photo overlaps placeholder button

FIXED-IN: 4.12.2
BUG: 327826